Created CourseLoad Entity. Implemented internationalization in Function Names.