@@ -12,6 +12,7 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
+import java.util.Set;
 
 import net.sourceforge.fenixedu.applicationTier.Service;
 import net.sourceforge.fenixedu.dataTransferObject.InfoCurricularYear;
@@ -35,184 +36,180 @@ import org.apache.commons.collections.Transformer;
 
 public class SearchExecutionCourses extends Service {
 
-    public List run(InfoExecutionPeriod infoExecutionPeriod, InfoExecutionDegree infoExecutionDegree,
-            InfoCurricularYear infoCurricularYear, String executionCourseName)
-            throws ExcepcaoPersistencia {
+    public List<InfoExecutionCourse> run(InfoExecutionPeriod infoExecutionPeriod, InfoExecutionDegree infoExecutionDegree,
+	    InfoCurricularYear infoCurricularYear, String executionCourseName)
+    throws ExcepcaoPersistencia {
 
-        List result = null;
+	List<InfoExecutionCourse> result = null;
 
-        final ExecutionPeriod executionPeriod = rootDomainObject.readExecutionPeriodByOID(infoExecutionPeriod.getIdInternal());
-        
-        ExecutionDegree executionDegree = null;
-        if (infoExecutionDegree != null) {
-            executionDegree = rootDomainObject.readExecutionDegreeByOID(infoExecutionDegree.getIdInternal());
-        }
+	final ExecutionPeriod executionPeriod = rootDomainObject.readExecutionPeriodByOID(infoExecutionPeriod.getIdInternal());
 
-        CurricularYear curricularYear = null;
-        if(infoCurricularYear != null) {
-        	curricularYear = rootDomainObject.readCurricularYearByOID(infoCurricularYear.getIdInternal());
-        }
+	ExecutionDegree executionDegree = null;
+	if (infoExecutionDegree != null) {
+	    executionDegree = rootDomainObject.readExecutionDegreeByOID(infoExecutionDegree.getIdInternal());
+	}
 
-        
-        List<ExecutionCourse> executionCourses = new ArrayList<ExecutionCourse>();
-        if(executionPeriod != null) {
-        	executionCourses = executionPeriod.getExecutionCoursesByDegreeCurricularPlanAndSemesterAndCurricularYearAndName(executionDegree.getDegreeCurricularPlan(), curricularYear, executionCourseName);
-        }
+	CurricularYear curricularYear = null;
+	if(infoCurricularYear != null) {
+	    curricularYear = rootDomainObject.readCurricularYearByOID(infoCurricularYear.getIdInternal());
+	}
 
-        result = (List) CollectionUtils.collect(executionCourses, new Transformer() {
 
-            public Object transform(Object arg0) {
-                InfoExecutionCourse infoExecutionCourse = null;
-                    // Get the occupancy Levels
-                    infoExecutionCourse = getOccupancyLevels(arg0);
+	List<ExecutionCourse> executionCourses = new ArrayList<ExecutionCourse>();
+	if(executionPeriod != null) {
+	    executionCourses = executionPeriod.getExecutionCoursesByDegreeCurricularPlanAndSemesterAndCurricularYearAndName(executionDegree.getDegreeCurricularPlan(), curricularYear, executionCourseName);
+	}
 
-                    // fill infomation regarding to teacher report
-                    getTeacherReportInformation(infoExecutionCourse, arg0);
-                return infoExecutionCourse;
-            }
+	result = (List<InfoExecutionCourse>) CollectionUtils.collect(executionCourses, new Transformer() {
+	    public Object transform(Object arg0) {
+		InfoExecutionCourse infoExecutionCourse = null;
+		infoExecutionCourse = getOccupancyLevels(arg0);
+		getTeacherReportInformation(infoExecutionCourse, arg0);
+		return infoExecutionCourse;
+	    }
 
-            private void getTeacherReportInformation(InfoExecutionCourse infoExecutionCourse, Object arg0) {
+	    private void getTeacherReportInformation(InfoExecutionCourse infoExecutionCourse, Object arg0) {
 
-                ExecutionCourse executionCourse = (ExecutionCourse) arg0;
+		ExecutionCourse executionCourse = (ExecutionCourse) arg0;
 
-                if (executionCourse.getAssociatedCurricularCourses() != null) {
+		if (executionCourse.getAssociatedCurricularCourses() != null) {
 
-                    InfoSiteEvaluationStatistics infoSiteEvaluationStatistics = new InfoSiteEvaluationStatistics();
-                    int enrolledInCurricularCourse = 0;
-                    int evaluated = 0;
-                    int approved = 0;
-                    Iterator iter = executionCourse.getAssociatedCurricularCourses().iterator();
-                    while (iter.hasNext()) {
-                        CurricularCourse curricularCourse = (CurricularCourse) iter.next();
+		    InfoSiteEvaluationStatistics infoSiteEvaluationStatistics = new InfoSiteEvaluationStatistics();
+		    int enrolledInCurricularCourse = 0;
+		    int evaluated = 0;
+		    int approved = 0;
+		    Iterator<CurricularCourse> iter = executionCourse.getAssociatedCurricularCourses().iterator();
 
-                        final List<Enrolment> enroled = curricularCourse.getEnrolmentsByExecutionPeriod(executionPeriod);
-                        enrolledInCurricularCourse += enroled.size();
-                        evaluated = Enrolment.countEvaluated(enroled);
-                        approved = Enrolment.countApproved(enroled);
-                    }
-                    infoSiteEvaluationStatistics.setEnrolled(Integer.valueOf(enrolledInCurricularCourse));
-                    infoSiteEvaluationStatistics.setEvaluated(Integer.valueOf(evaluated));
-                    infoSiteEvaluationStatistics.setApproved(Integer.valueOf(approved));
+		    while (iter.hasNext()) {
+			CurricularCourse curricularCourse = iter.next();
 
-                    infoExecutionCourse.setInfoSiteEvaluationStatistics(infoSiteEvaluationStatistics);
-                }
-            }
+			final List<Enrolment> enroled = curricularCourse.getEnrolmentsByExecutionPeriod(executionPeriod);
+			enrolledInCurricularCourse += enroled.size();
+			evaluated = Enrolment.countEvaluated(enroled);
+			approved = Enrolment.countApproved(enroled);
+		    }
+		    infoSiteEvaluationStatistics.setEnrolled(Integer.valueOf(enrolledInCurricularCourse));
+		    infoSiteEvaluationStatistics.setEvaluated(Integer.valueOf(evaluated));
+		    infoSiteEvaluationStatistics.setApproved(Integer.valueOf(approved));
 
-            private InfoExecutionCourse getOccupancyLevels(Object arg0) {
-                InfoExecutionCourse infoExecutionCourse;
-                // Get the associated Shifs
-                ExecutionCourse executionCourse = (ExecutionCourse) arg0;
+		    infoExecutionCourse.setInfoSiteEvaluationStatistics(infoSiteEvaluationStatistics);
+		}
+	    }
 
-                // FIXME: Find a better way to get the total
-                // capacity for
-                // each type of Shift
-                Integer theoreticalCapacity = Integer.valueOf(0);
-                Integer theoPraticalCapacity = Integer.valueOf(0);
-                Integer praticalCapacity = Integer.valueOf(0);
-                Integer labCapacity = Integer.valueOf(0);
-                Integer doubtsCapacity = Integer.valueOf(0);
-                Integer reserveCapacity = Integer.valueOf(0);
+	    private InfoExecutionCourse getOccupancyLevels(Object arg0) {
 
-                Integer semCapacity = Integer.valueOf(0);
-                Integer probCapacity = Integer.valueOf(0);
-                Integer fieldCapacity = Integer.valueOf(0);
-                Integer trainCapacity = Integer.valueOf(0);
-                Integer tutCapacity = Integer.valueOf(0);
+		InfoExecutionCourse infoExecutionCourse;              
+		ExecutionCourse executionCourse = (ExecutionCourse) arg0;
 
-                List shifts = executionCourse.getAssociatedShifts();
-                Iterator iterator = shifts.iterator();
-                while (iterator.hasNext()) {
-                    Shift shift = (Shift) iterator.next();
+		Integer theoreticalCapacity = Integer.valueOf(0);
+		Integer theoPraticalCapacity = Integer.valueOf(0);
+		Integer praticalCapacity = Integer.valueOf(0);
+		Integer labCapacity = Integer.valueOf(0);
+		Integer doubtsCapacity = Integer.valueOf(0);
+		Integer reserveCapacity = Integer.valueOf(0);
 
-                    if (shift.getTipo().equals(ShiftType.TEORICA)) {
-                        theoreticalCapacity = Integer.valueOf(theoreticalCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.TEORICO_PRATICA)) {
-                        theoPraticalCapacity = Integer.valueOf(theoPraticalCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.DUVIDAS)) {
-                        doubtsCapacity = Integer.valueOf(doubtsCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.LABORATORIAL)) {
-                        labCapacity = Integer.valueOf(labCapacity.intValue() + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.PRATICA)) {
-                        praticalCapacity = Integer.valueOf(praticalCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.RESERVA)) {
-                        reserveCapacity = Integer.valueOf(reserveCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.SEMINARY)) {
-                        semCapacity = Integer.valueOf(semCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.PROBLEMS)) {
-                        probCapacity = Integer.valueOf(probCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.FIELD_WORK)) {
-                        fieldCapacity = Integer.valueOf(fieldCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.TRAINING_PERIOD)) {
-                        trainCapacity = Integer.valueOf(trainCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    } else if (shift.getTipo().equals(ShiftType.TUTORIAL_ORIENTATION)) {
-                        tutCapacity = Integer.valueOf(tutCapacity.intValue()
-                                + shift.getLotacao().intValue());
-                    }
-                }
+		Integer semCapacity = Integer.valueOf(0);
+		Integer probCapacity = Integer.valueOf(0);
+		Integer fieldCapacity = Integer.valueOf(0);
+		Integer trainCapacity = Integer.valueOf(0);
+		Integer tutCapacity = Integer.valueOf(0);
 
-                infoExecutionCourse = InfoExecutionCourse.newInfoFromDomain(executionCourse);
-                List capacities = new ArrayList();
+		Set<Shift> shifts = executionCourse.getAssociatedShifts();
+		Iterator<Shift> iterator = shifts.iterator();
 
-                if (theoreticalCapacity.intValue() != 0) {
-                    capacities.add(theoreticalCapacity);
-                }
-                if (theoPraticalCapacity.intValue() != 0) {
-                    capacities.add(theoPraticalCapacity);
-                }
-                if (doubtsCapacity.intValue() != 0) {
-                    capacities.add(doubtsCapacity);
-                }
-                if (labCapacity.intValue() != 0) {
-                    capacities.add(labCapacity);
-                }
-                if (praticalCapacity.intValue() != 0) {
-                    capacities.add(praticalCapacity);
-                }
-                if (reserveCapacity.intValue() != 0) {
-                    capacities.add(reserveCapacity);
-                }
+		while (iterator.hasNext()) {
+		    
+		    Shift shift = (Shift) iterator.next();
 
-                if (semCapacity.intValue() != 0) {
-                    capacities.add(semCapacity);
-                }
-                if (probCapacity.intValue() != 0) {
-                    capacities.add(probCapacity);
-                }
-                if (fieldCapacity.intValue() != 0) {
-                    capacities.add(fieldCapacity);
-                }
-                if (trainCapacity.intValue() != 0) {
-                    capacities.add(trainCapacity);
-                }
-                if (tutCapacity.intValue() != 0) {
-                    capacities.add(tutCapacity);
-                }
+		    if (shift.containsType(ShiftType.TEORICA)) {
+			theoreticalCapacity = Integer.valueOf(theoreticalCapacity.intValue() + shift.getLotacao().intValue());
 
-                int total = 0;
+		    } else if (shift.containsType(ShiftType.TEORICO_PRATICA)) {
+			theoPraticalCapacity = Integer.valueOf(theoPraticalCapacity.intValue() + shift.getLotacao().intValue());
 
-                if (!capacities.isEmpty()) {
-                    total = ((Integer) Collections.min(capacities)).intValue();
-                }
+		    } else if (shift.containsType(ShiftType.DUVIDAS)) {
+			doubtsCapacity = Integer.valueOf(doubtsCapacity.intValue() + shift.getLotacao().intValue());
 
-                if (total == 0) {
-                    infoExecutionCourse.setOccupancy(new Double(-1));
-                } else {
-                    infoExecutionCourse.setOccupancy(NumberUtils.formatNumber(new Double((new Double(
-                            executionCourse.getAttendsCount()).floatValue() * 100 / total)), 1));
-                }
-                return infoExecutionCourse;
-            }
-        });
+		    } else if (shift.containsType(ShiftType.LABORATORIAL)) {
+			labCapacity = Integer.valueOf(labCapacity.intValue() + shift.getLotacao().intValue());
 
-        return result;
+		    } else if (shift.containsType(ShiftType.PRATICA)) {
+			praticalCapacity = Integer.valueOf(praticalCapacity.intValue() + shift.getLotacao().intValue());
+
+		    } else if (shift.containsType(ShiftType.RESERVA)) {
+			reserveCapacity = Integer.valueOf(reserveCapacity.intValue() + shift.getLotacao().intValue());
+			
+		    } else if (shift.containsType(ShiftType.SEMINARY)) {
+			semCapacity = Integer.valueOf(semCapacity.intValue() + shift.getLotacao().intValue());
+			
+		    } else if (shift.containsType(ShiftType.PROBLEMS)) {
+			probCapacity = Integer.valueOf(probCapacity.intValue() + shift.getLotacao().intValue());
+			
+		    } else if (shift.containsType(ShiftType.FIELD_WORK)) {
+			fieldCapacity = Integer.valueOf(fieldCapacity.intValue() + shift.getLotacao().intValue());
+			
+		    } else if (shift.containsType(ShiftType.TRAINING_PERIOD)) {
+			trainCapacity = Integer.valueOf(trainCapacity.intValue() + shift.getLotacao().intValue());
+			
+		    } else if (shift.containsType(ShiftType.TUTORIAL_ORIENTATION)) {
+			tutCapacity = Integer.valueOf(tutCapacity.intValue() + shift.getLotacao().intValue());
+		    }
+		}
+
+		infoExecutionCourse = InfoExecutionCourse.newInfoFromDomain(executionCourse);
+		List<Integer> capacities = new ArrayList<Integer>();
+
+		if (theoreticalCapacity.intValue() != 0) {
+		    capacities.add(theoreticalCapacity);
+		}
+		if (theoPraticalCapacity.intValue() != 0) {
+		    capacities.add(theoPraticalCapacity);
+		}
+		if (doubtsCapacity.intValue() != 0) {
+		    capacities.add(doubtsCapacity);
+		}
+		if (labCapacity.intValue() != 0) {
+		    capacities.add(labCapacity);
+		}
+		if (praticalCapacity.intValue() != 0) {
+		    capacities.add(praticalCapacity);
+		}
+		if (reserveCapacity.intValue() != 0) {
+		    capacities.add(reserveCapacity);
+		}
+
+		if (semCapacity.intValue() != 0) {
+		    capacities.add(semCapacity);
+		}
+		if (probCapacity.intValue() != 0) {
+		    capacities.add(probCapacity);
+		}
+		if (fieldCapacity.intValue() != 0) {
+		    capacities.add(fieldCapacity);
+		}
+		if (trainCapacity.intValue() != 0) {
+		    capacities.add(trainCapacity);
+		}
+		if (tutCapacity.intValue() != 0) {
+		    capacities.add(tutCapacity);
+		}
+
+		int total = 0;
+
+		if (!capacities.isEmpty()) {
+		    total = ((Integer) Collections.min(capacities)).intValue();
+		}
+
+		if (total == 0) {
+		    infoExecutionCourse.setOccupancy(Double.valueOf(-1));
+		} else {
+		    infoExecutionCourse.setOccupancy(NumberUtils.formatNumber(Double.valueOf((Double.valueOf(
+			    executionCourse.getAttendsCount()).floatValue() * 100 / total)), 1));
+		}
+		return infoExecutionCourse;
+	    }
+	});
+
+	return result;
     }
 }
